--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <nav>
       <ul>
         <li>
+          <a href="https://twitter.com/pepe_rug">
+            <img src="images/twitterr.png" alt srcset>
+          </a>
+        </li>
+        <li>
           <a href="https://t.me/peperug">
             <img src="images/Telegramm.png" alt srcset>
           </a>
