--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>PEPE RUG</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="https://twitter.com/pepe_rug">
-            <img src="images/twitterr.png" alt srcset>
-          <a href="https://t.me/peperug">
-            <img src="images/Telegramm.png" alt srcset>
-          </a>
-        </li>
-      </ul>
-    </nav>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>PEPE RUG</title>
+</head>
+<body>
+  <nav>
+    <ul>
+      <li>
+        <a href="https://twitter.com/pepe_rug">
+          <img src="images/twitterr.png" alt srcset>
+        </a>
+      </li>
+      <li>
+        <a href="https://t.me/peperug">
+          <img src="images/Telegramm.png" alt srcset>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-    <main>
-      <div class="content">
-        <img class="text" src="images/Peperugtext.png" alt srcset>
-        <a href="https://twitter.com/intent/tweet?text=guys%20im%20getting%20my%20$NUTS%20balls%20with%20@deeznuts"></a>
-        <img onclick="handleTweet()" class="register" src="images/Registerrugg.png" alt srcset>
-      </div>
-      <div class="lig-wrap">
-        <img src="images/PEPE RUG WHITE.png" alt srcset>
-      </div>
-    </main>
-    <script src="js/app.js"></script>
-  
+  <main>
+    <div class="content">
+      <img class="text" src="images/Peperugtext.png" alt srcset>
+      <a href="https://twitter.com/intent/tweet?text=guys%20im%20getting%20my%20$NUTS%20balls%20with%20@deeznuts"></a>
+      <img onclick="handleTweet()" class="register" src="images/Registerrugg.png" alt srcset>
+      
+        <a href="https://t.me/peperug">
+          <img class= "tg" src="images/tg50.png" alt srcset>
+          
+    </div>
+    <div class="lig-wrap">
+      <img src="images/PEPE RUG WHITE.png" alt srcset>
+    </div>
+  </main>
+  <script src="js/app.js"></script>
+
 
 </body></html>
